--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,8 +49,9 @@ jobs:
        uses: actions/checkout@v2
      - name: Create kubeconfig
        run: |
-         echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > /root/.kube/config
-         cat /root/.kube/config
+         mkdir ${HOME}/.kube
+         echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > ${HOME}/.kube/config
+         cat ${HOME}/.kube/config
      - name: Use context
        run: kubectl config use-context nova-fe-retail
      - name: Deploy to K8s
